<resources>
    <string name="app_name">Радио онлайн</string>
    <string name="action_settings">Settings</string>

    <string name="no_stream">Radio station couldn\'t stream!</string>
    <string name="live_broadcast">Радио онлайн</string>
    <string name="description_image">A normal ImageView.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="json">
        [
  {
    "name" : "BBC - Radio 1",
    "stream" : "http://bbcmedia.ic.llnwd.net/stream/bbcmedia_radio1_mf_p"
  },
  {
    "name": "BBC - Radio 2",
    "stream": "http://bbcmedia.ic.llnwd.net/stream/bbcmedia_radio2_mf_p"
  },
  {
    "name": "BBC - Radio 3",
    "stream": "http://bbcmedia.ic.llnwd.net/stream/bbcmedia_radio3_mf_p"
  },
  {
    "name": "BBC - Radio 4",
    "stream": "http://bbcmedia.ic.llnwd.net/stream/bbcmedia_radio4fm_mf_p"
  },
  {
    "name": "BBC - Radio 5 live",
    "stream": "http://bbcmedia.ic.llnwd.net/stream/bbcmedia_radio5live_mf_p"
  },
  {
    "name": "BBC - Radio 6",
    "stream": "http://bbcmedia.ic.llnwd.net/stream/bbcmedia_6music_mf_p"
  },
  {
    "name": "BBC Radio Asian Network",
    "stream": "http://bbcmedia.ic.llnwd.net/stream/bbcmedia_asianet_mf_p"
  },
  {
    "name" : "BBC World Service",
    "stream" : "http://bbcwssc.ic.llnwd.net/stream/bbcwssc_mp1_ws-eieuk"
  },
  {
    "name" : "Energy",
    "stream" : "http://ic2.101.ru:8000/v1_1"
  }
]
    </string>
    <string name="into_fav">в избранное</string>
    <string name="choose_station">Выберите радиостанцию</string>
    <string name="into_site">Перейти на сайт</string>
    <string name="empty_list">Пока у вас нет избранных радиостанций</string>
    <string name="clear_fav">Очистить избранное</string>
    <string name="timer">Таймер сна</string>
    <string name="choose_timer">Выберите таймер для выключения</string>
    <string name="cancel">Отмена</string>
    <string name="OK">Запустить таймер</string>
    <string name="energy">Радио Energy</string>
</resources>
