<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="@color/black">

    <LinearLayout
        android:id="@+id/sub_player"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClickSub"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/image_view_sub"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/choose_station"
            android:textColor="#757575"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/playTrigger"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="@drawable/btn_play_pause"
            android:src="@drawable/ic_play_arrow_black"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|bottom">
        <ImageView
            android:id="@+id/iv_solo"

            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/description_image"
            android:src="@drawable/blue"
            android:tag="@string/bb_ref_tag"/>

        <TextView
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Радио Energy"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name1"
            android:id="@+id/linear_volume"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_volume"

                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/seek_bar"/>
            <SeekBar
                android:layout_centerInParent="true"
                android:id="@+id/seek_bar"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:progressTint="@color/white"
                android:thumbTint="@color/colorPrimary"
                android:progressBackgroundTint="@color/white"
                />
        </RelativeLayout>
        <ImageButton
            android:id="@+id/playTrigger1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_play_pause"
            android:src="@drawable/ic_play_arrow_black_big"
            android:layout_marginBottom="30dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            >
            <Button

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_into_site"
                android:layout_weight="1"
                android:text="@string/into_site"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/btn_into_fav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/into_fav"
                android:layout_below="@id/playTrigger1"
                android:layout_toRightOf="@id/btn_into_site"
                android:textColor="@color/white"
                android:paddingLeft="18dp"
                android:layout_marginRight="3dp"
                android:drawableLeft="@drawable/ic_favorite_border_black_24dp"

                style="@style/Widget.AppCompat.Button.Borderless.Colored"

                android:layout_weight="1"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>