<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/bottom_sheet"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/myline"
              android:elevation="15dp"
              android:clickable="true"
              android:focusable="true"
              app:behavior_hideable="false"
              app:behavior_peekHeight="60dp"
              app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <com.alxgrk.blendedbackground.BlendedBackgroundLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:lower_color="#191414"
        app:upper_blend_in="false"
        app:upper_color="@color/colorPrimaryDark"
        app:lower_blend_in="false"
        app:gradient_type="linear">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/sub_player"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_solo"

                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/description_image"
                    android:src="@drawable/blue"
                    android:tag="@string/bb_ref_tag"/>

                <TextView
                    android:id="@+id/name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/energy"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

                <RelativeLayout
                    android:id="@+id/linear_volume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"

                        android:layout_toLeftOf="@id/seek_bar"
                        android:src="@drawable/ic_volume"/>

                    <SeekBar
                        android:id="@+id/seek_bar"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:progressTint="@color/white"
                        android:thumbTint="@color/colorPrimary"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@drawable/border_record"
                        android:layout_marginRight="30dp"
                        android:layout_toLeftOf="@id/playTrigger1"
                        android:paddingBottom="7dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="7dp">

                        <ImageButton
                            android:id="@+id/img_btn_record"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_fiber_manual_record_40dp" android:contentDescription="TODO"/>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="fill_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@color/easy_grey"/>

                        <ImageButton
                            android:id="@+id/img_btn_record_stop"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_stop_black_30dp"/>
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/playTrigger1"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/btn_play_pause"
                        android:src="@drawable/ic_play_arrow_black_big"
                        />

                    <ImageButton
                        android:id="@+id/btn_into_fav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="40dp"
                        android:layout_toRightOf="@id/playTrigger1"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_favorite_border_black_24dp"/>
                </RelativeLayout>

                <Button
                    android:id="@+id/btn_into_site"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/into_site"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
        </LinearLayout>

    </com.alxgrk.blendedbackground.BlendedBackgroundLayout>


</LinearLayout>